website/websites/u64q/code/fibonacci.1.pyston.log

 Fri, 30 Oct 2020 19:08:23 GMT

COMMAND LINE:
 /usr/bin/pyston fibonacci.pyston 1000000

PROGRAM FAILED 


PROGRAM OUTPUT:

  File "fibonacci.pyston", line 8
    print fib(int(sys.argv[1]))
          ^
SyntaxError: invalid syntax
